# homework-python-shortener

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
migrations/: 00001_initial.sql
src/service/: main.py
src/service/api/: app.py  dependencies.py  links.py  router.py  routes.py
src/service/common/: shortcode_generator.py
src/service/core/: config.py  exceptions.py
src/service/db/: postgres.py
src/service/models/domain/: link.py
src/service/models/schemas/: link.py
src/service/repositories/links/: __init__.py  repository.py
src/service/services/: link_service.py
tests/: conftest.py
tests/e2e/: test_concurrent_operations.py  test_corner_cases.py  test_create_links.py  test_delete_links.py  test_link_expiration.py  test_link_stats.py  test_redirect_links.py  test_search_links.py  test_update_links.py
